[gd_scene load_steps=6 format=3 uid="uid://c04t7hvga6qed"]

[ext_resource type="Script" path="res://scenes/dialogs/load_dialog/load_dialog.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://1yfb0q3ouv5s" path="res://assets/themes/dark/add.svg" id="2_yhwsu"]
[ext_resource type="Texture2D" uid="uid://crw6jcy472ikl" path="res://assets/themes/dark/open_folder.svg" id="3_wvchh"]
[ext_resource type="Texture2D" uid="uid://cshg15hmeanh" path="res://assets/themes/dark/open_file.svg" id="4_rcxnu"]

[sub_resource type="StyleBoxEmpty" id="5"]

[node name="LoadDialog" type="PanelContainer"]
offset_right = 335.0
offset_bottom = 242.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TitleHBox" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer/TitleHBox"]
layout_mode = 2
theme_type_variation = &"LabelTitle"
text = "DIALOG_LOAD_TITLE"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/TitleHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("5")

[node name="NewProjectButton" type="Button" parent="VBoxContainer/TitleHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ListItem"
icon = ExtResource("2_yhwsu")

[node name="OpenFolderButton" type="Button" parent="VBoxContainer/TitleHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ListItem"
icon = ExtResource("3_wvchh")

[node name="FilePickerButton" type="Button" parent="VBoxContainer/TitleHBox"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"ListItem"
icon = ExtResource("4_rcxnu")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="NoProjectsLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"LabelSubtitle"
text = "DIALOG_LOAD_NO_PROJECTS"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="CancelButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
focus_mode = 1
text = "BTN_CANCEL"

[connection signal="pressed" from="VBoxContainer/TitleHBox/NewProjectButton" to="." method="_on_new_project_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TitleHBox/OpenFolderButton" to="." method="_on_open_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TitleHBox/FilePickerButton" to="." method="_on_pick_file_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
